--- a/style.css
+++ b/style.css
@@ -11,4 +11,9 @@ html {
 
 body {
 	font-size: 1.6rem;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
