--- a/style.css
+++ b/style.css
@@ -15,5 +15,10 @@ body {
 	height: 100vh;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
+}
+
+form {
+	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
+	padding: 5px;
 }
